@@ -471,15 +471,35 @@ doParseFile(const char *name, Module *P, int *is_dup)
         }
     } else {
         // no extension, see if we can figure one out
-      langptr = ".spin2";
-      language = LANG_SPIN_SPIN2;
+        // if currently compiling a Spin1 program assume Spin1
+        // as the default
+        if (current && current->mainLanguage == LANG_SPIN_SPIN1) {
+            langptr = ".spin";
+            language = LANG_SPIN_SPIN1;
+        } else if (current && current->mainLanguage == LANG_SPIN_SPIN2) {
+            langptr = ".spin2";
+            language = LANG_SPIN_SPIN2;
+        } else if (gl_p2) {
+            langptr = ".spin2";
+            language = LANG_SPIN_SPIN2;
+        } else {
+            langptr = ".spin";
+            language = LANG_SPIN_SPIN1;
+        }
     }
     if (current) {
         fname = find_file_on_path(&gl_pp, name, langptr, current->fullname);
-        if (!fname && !strcmp(langptr, ".spin2")) {
-            fname = find_file_on_path(&gl_pp, name, ".spin", current->fullname);
-            if (fname) {
-                language = LANG_SPIN_SPIN1;
+        if (!fname) {
+            if (!strcmp(langptr, ".spin2")) {
+                fname = find_file_on_path(&gl_pp, name, ".spin", current->fullname);
+                if (fname) {
+                    language = LANG_SPIN_SPIN1;
+                }
+            } else if (!strcmp(langptr, ".spin")) {
+                fname = find_file_on_path(&gl_pp, name, ".spin2", current->fullname);
+                if (fname) {
+                    language = LANG_SPIN_SPIN2;
+                }
             }
         }
         if (fname) {
